# Black-Frame-Detector-cpp

./: .gitignore  CMakeLists.txt  main.cpp
include/: BlackFrameDetector.h
src/: BlackFrameDetector.cpp  main.cpp
